--- a/incubator/jaeger/templates/agent-ds.yaml
+++ b/incubator/jaeger/templates/agent-ds.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.agent.enabled -}}
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -40,9 +41,19 @@ spec:
         ports:
         - containerPort: {{ .Values.agent.service.zipkinThriftPort }}
           protocol: UDP
+          {{- if .Values.agent.daemonset.useHostPort }}
+          hostPort: {{ .Values.agent.service.zipkinThriftPort }}
+          {{- end }}
         - containerPort: {{ .Values.agent.service.compactPort }}
           protocol: UDP
+          {{- if .Values.agent.daemonset.useHostPort }}
+          hostPort: {{ .Values.agent.service.compactPort }}
+          {{- end }}
         - containerPort: {{ .Values.agent.service.binaryPort }}
           protocol: UDP
+          {{- if .Values.agent.daemonset.useHostPort }}
+          hostPort: {{ .Values.agent.service.binaryPort }}
+          {{- end }}
         resources:
 {{ toYaml .Values.agent.resources | indent 10 }}
+{{- end -}}
