--- a/incubator/jaeger/templates/collector-svc.yaml
+++ b/incubator/jaeger/templates/collector-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.collector.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -33,3 +34,4 @@ spec:
     release: "{{ .Release.Name }}"
     jaeger-infra: collector-pod
   type: {{ .Values.collector.service.type }}
+{{- end -}}
