--- a/incubator/jaeger/templates/query-svc.yaml
+++ b/incubator/jaeger/templates/query-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.query.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -25,3 +26,4 @@ spec:
     release: "{{ .Release.Name }}"
     jaeger-infra: query-pod
   type: {{ .Values.query.service.type }}
+{{- end -}}
